--- a/Prediction Page/Aquaculture-Management-main/static/style.css
+++ b/Prediction Page/Aquaculture-Management-main/static/style.css
@@ -1,64 +1,57 @@
 /* styles.css */
-
 body {
     font-family: Arial, sans-serif;
-    background-color: #e0f7fa; /* Light blue background */
-    color: #333;
     margin: 0;
     padding: 0;
+    background-image: linear-gradient(#bae6fd, #818cf8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
 .container {
     width: 80%;
-    margin: 0 auto;
-    padding: 20px;
+    max-width: 400px;
+    background-color: white;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+    text-align: center;
 }
 
 h1 {
-    text-align: center;
-    color: #006064; /* Darker blue for headings */
+    color: #007bff;
+    margin-bottom: 20px;
 }
 
 .form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: grid;
     gap: 20px;
 }
 
-.input-group {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
+.input-group label {
+    color: #555;
 }
 
-label {
-    font-weight: bold;
-}
-
-input[type="number"] {
+.input-group input {
     padding: 10px;
-    border: 1px solid #006064; /* Darker blue border */
+    height: 40px;
+    border: 1px solid #ccc;
     border-radius: 5px;
-    width: 100%;
-    max-width: 300px;
 }
 
 .btn {
     padding: 10px 20px;
-    background-color: #006064; /* Darker blue background */
-    color: white;
+    background-color: #0284c7;
+    color: #fff;
+    font-size: 1.125rem;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
 
 .btn:hover {
-    background-color: #00838f; /* Slightly lighter blue on hover */
-}
-
-h2 {
-    text-align: center;
-    color: #006064; /* Darker blue for predictions */
+    background-color: #007bbf;
 }
